# fastapi-guard-agent

./: .gitignore  .mike.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  compose.yml  context7.json  mkdocs.yml  pyproject.toml  setup.py  versions.json  vulture_whitelist.py
.github/: FUNDING.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  code-ql.yml  docs.yml  greetings.yml  release-shim.yml  release.yml  scheduled-lint.yml  stale.yml  summary.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/api/overview/: index.html
0.0.1/installation/: index.html
0.0.1/release-notes/: index.html
0.0.1/search/: search_index.json
0.0.1/tutorial/getting-started/: index.html
0.1.0/: 404.html  index.html  robots.txt  sitemap.xml
0.1.0/api/overview/: index.html
0.1.0/installation/: index.html
0.1.0/release-notes/: index.html
0.1.0/search/: search_index.json
0.1.0/tutorial/getting-started/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/api/overview/: index.html
0.1.1/installation/: index.html
0.1.1/release-notes/: index.html
0.1.1/search/: search_index.json
0.1.1/tutorial/getting-started/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api/overview/: index.html
1.0.0/installation/: index.html
1.0.0/release-notes/: index.html
1.0.0/search/: search_index.json
1.0.0/tutorial/getting-started/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/overview/: index.html
1.0.1/installation/: index.html
1.0.1/overrides/partials/: version-select.html
1.0.1/release-notes/: index.html
1.0.1/search/: search_index.json
1.0.1/tutorial/getting-started/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/api/overview/: index.html
1.0.2/installation/: index.html
1.0.2/release-notes/: index.html
1.0.2/search/: search_index.json
1.0.2/tutorial/getting-started/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/api/overview/: index.html
1.1.0/installation/: index.html
1.1.0/release-notes/: index.html
1.1.0/search/: search_index.json
1.1.0/tutorial/getting-started/: index.html
1.1.0/versions/: versions.json
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/api/overview/: index.html
1.1.1/installation/: index.html
1.1.1/release-notes/: index.html
1.1.1/search/: search_index.json
1.1.1/tutorial/getting-started/: index.html
1.1.1/versions/: versions.json
1.1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.1.2/api/overview/: index.html
1.1.2/installation/: index.html
1.1.2/release-notes/: index.html
1.1.2/search/: search_index.json
1.1.2/tutorial/getting-started/: index.html
1.1.2/versions/: versions.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/api/overview/: index.html
2.0.0/installation/: index.html
2.0.0/release-notes/: index.html
2.0.0/search/: search_index.json
2.0.0/tutorial/getting-started/: index.html
2.0.0/versions/: versions.json
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/adapters/django/: index.html
2.1.0/adapters/fastapi/: index.html
2.1.0/adapters/flask/: index.html
2.1.0/adapters/tornado/: index.html
2.1.0/api/overview/: index.html
2.1.0/installation/: index.html
2.1.0/release-notes/: index.html
2.1.0/search/: search_index.json
2.1.0/tutorial/getting-started/: index.html
2.1.0/versions/: versions.json
2.2.0/: 404.html  index.html  sitemap.xml
2.2.0/adapters/django/: index.html
2.2.0/adapters/fastapi/: index.html
2.2.0/adapters/flask/: index.html
2.2.0/adapters/tornado/: index.html
2.2.0/api/overview/: index.html
2.2.0/installation/: index.html
2.2.0/release-notes/: index.html
2.2.0/search/: search_index.json
2.2.0/tutorial/getting-started/: index.html
2.2.0/versions/: versions.json
2.4.0/: 404.html  index.html  sitemap.xml
2.4.0/adapters/django/: index.html
2.4.0/adapters/fastapi/: index.html
2.4.0/adapters/flask/: index.html
2.4.0/adapters/tornado/: index.html
2.4.0/api/overview/: index.html
2.4.0/installation/: index.html
2.4.0/release-notes/: index.html
2.4.0/search/: search_index.json
2.4.0/tutorial/getting-started/: index.html
2.4.1/: 404.html  index.html  sitemap.xml
2.4.1/adapters/django/: index.html
2.4.1/adapters/fastapi/: index.html
2.4.1/adapters/flask/: index.html
2.4.1/adapters/tornado/: index.html
2.4.1/api/overview/: index.html
2.4.1/installation/: index.html
2.4.1/release-notes/: index.html
2.4.1/search/: search_index.json
2.4.1/tutorial/getting-started/: index.html
2.5.0/: 404.html  index.html  sitemap.xml
2.5.0/installation/: index.html
2.5.0/release-notes/: index.html
2.5.0/search/: search_index.json
2.5.0/versions/: versions.json
2.6.0/: 404.html  index.html  objects.inv  robots.txt  sitemap.xml
2.6.0/installation/: index.html
2.6.0/release-notes/: index.html
2.6.0/search/: search_index.json
docs/: index.md  installation.md  release-notes.md
docs/adapters/: django.md  fastapi.md  flask.md  tornado.md
docs/api/: overview.md
docs/tutorial/: getting-started.md
docs/versions/: versions.json
examples/: basic_usage.py
guard_agent/: __init__.py  _version.py  buffer.py  client.py  encryption.py  exceptions.py  install_id.py  models.py  protocols.py  signing.py  transport.py  utils.py
shim/: README.md  pyproject.toml
shim/fastapi_guard_agent/: __init__.py
tests/: __init__.py  conftest.py  test_adapter_django.py  test_adapter_fastapi.py  test_adapter_flask.py  test_adapter_tornado.py  test_buffer.py  test_buffer_early_flush.py  test_client.py  test_client_branches.py  test_client_fork_safety.py  test_encryption.py  test_install_id.py  test_loop_intervals.py  test_models.py  test_performance.py  test_signing.py  test_sync_agent_handler.py  test_transport.py  test_transport_encryption_failure.py  test_transport_idempotency.py  test_transport_signing.py  test_utils.py
(+13 files in other folders)
