[project]
name = "guard-agent"
version = "2.2.0"
description = "Framework-agnostic telemetry and monitoring agent for the Guard security ecosystem (fastapi-guard, flaskapi-guard, djangoapi-guard, tornadoapi-guard)"
authors = [
    {name = "Renzo Franceschini", email = "rennf93@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "cryptography",
    "httpx",
    "pydantic",
    "typing-extensions",
]

[project.urls]
Homepage = "https://guard-core.com"
Documentation = "https://rennf93.github.io/guard-agent/latest/"
Repository = "https://github.com/rennf93/guard-agent"
Changelog = "https://github.com/rennf93/guard-agent/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/rennf93/guard-agent/issues"
"Cloud Dashboard" = "https://app.guard-core.com"
"Live Playground" = "https://playground.guard-core.com"

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "black",
    "deptry",
    "django",
    "djapi-guard",
    "fastapi",
    "fastapi-guard",
    "flask",
    "flaskapi-guard",
    "httpx",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "psutil",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "ruff",
    "tornado",
    # tornadoapi-guard: not yet published on PyPI (only a yanked 0.0.1).
    # Re-enable here once the adapter ships a 1.0.0+ release to PyPI.
    "types-psutil",
    "types-setuptools",
    "vulture",
    "xenon",
]
redis = [
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guard_agent"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".envrc",
    ".venv/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    ".pre-commit-config.yaml",
    "compose.yml",
    "Dockerfile",
    "Makefile",
    "mkdocs.yml",
    "tests/",
    "docs/",
    "examples/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
exclude = ["vulture_whitelist.py", ".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=guard_agent --cov-report=term-missing"
markers = [
    "asyncio: mark tests as async"
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["vulture_whitelist.py", ".venv"]

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "httpx.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "cryptography.*"
follow_imports = "skip"

[tool.pymarkdown.plugins.md003]
enabled = false

[tool.pymarkdown.plugins.md022]
enabled = false

[tool.pymarkdown.plugins.md032]
enabled = false

[tool.pymarkdown.plugins.md007]
enabled = true
indent = 2

[tool.pymarkdown.plugins.md012]
enabled = true
maximum = 2

[tool.pymarkdown.plugins.md013]
enabled = false

[tool.pymarkdown.plugins.md024]
enabled = true
siblings_only = true

[tool.pymarkdown.plugins.md033]
enabled = false

[tool.pymarkdown.plugins.md035]
enabled = false

[tool.pymarkdown.plugins.md041]
enabled = false

[tool.pymarkdown.plugins.md046]
enabled = false

[tool.pymarkdown.plugins.md029]
enabled = false

[tool.vulture]
paths = ["guard_agent", "tests", "vulture_whitelist.py"]
exclude = ["**/conftest.py", ".venv"]
min_confidence = 100
ignore_decorators = [
    "@app.route",
    "@app.get",
    "@app.post",
    "@app.put",
    "@app.delete",
    "@app.patch",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@validator",
    "@root_validator",
    "@field_validator",
    "@model_validator",
]
ignore_names = [
    "test_*",
    "Test*",
    "cleanup_*",
    "mock_*",
    "expected_*",
    "exc_*",
    "__*__",
    "Config",
    "Field",
]
sort_by_size = true

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", ".venv", "vulture_whitelist.py"]
severity = "medium"

[tool.radon]
exclude = "tests/*,.venv/*,vulture_whitelist.py"
cc_min = "C"
mi_min = "A"
no_assert = false
show_closures = true
total_average = true

[tool.xenon]
max_absolute = "B"
max_modules = "A"
max_average = "A"
exclude = ["tests/*", ".venv/*", "vulture_whitelist.py"]
ignore = []

[tool.deptry]
exclude = ["tests", ".venv", "vulture_whitelist.py", "docs"]
extend_exclude = ["conftest.py", "setup.py"]
known_first_party = ["guard_agent"]
per_rule_ignores = { "DEP002" = [
    "bandit",
    "black",
    "deptry",
    "django",
    "djapi-guard",
    "fastapi",
    "fastapi-guard",
    "flask",
    "flaskapi-guard",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "psutil",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "redis",
    "ruff",
    "tornado",
    "types-psutil",
    "types-setuptools",
    "typing-extensions",
    "vulture",
    "xenon",
] }
