[project]
name = "fastapi_guard_agent"
version = "1.2.0"
description = "Deprecated alias — the package has been renamed to guard-agent. Installing fastapi-guard-agent will transitively install guard-agent."
authors = [
    {name = "Renzo Franceschini", email = "rennf93@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "guard-agent>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://guard-core.com"
"Renamed To" = "https://pypi.org/project/guard-agent/"
Repository = "https://github.com/rennf93/guard-agent"
"Cloud Dashboard" = "https://app.guard-core.com"
"Live Playground" = "https://playground.guard-core.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_guard_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "README.md",
    "fastapi_guard_agent/",
]
